# Liber

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resource.qrc
src/database/: dbmanager.cpp  dbmanager.h
src/models/: Book.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/dialogs/: dialogconfirmation.cpp  dialogconfirmation.h  dialogconfirmation.ui
